--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+.modal{
+  padding:20px;
+  background-color: beige;
+  margin-top:20px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -17,7 +21,14 @@ body {
   padding:20px;
   font-weight: 600;
   font-size:20px;
+  box-sizing: border-box;
 
+}
+.list{
+  margin-top: 20px;
+  text-align: left;
+  padding-left:20px;
+  padding-right:20px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
